[project]
name = "chickadee"
version = "0.6.1"
description = "A Web Processing Service for PCIC's ClimDown package."
authors = [
    {name = "Nikola Rados"},
    {name = "Sangwon Lim"},
    {name = "Eric Yvorchuk"},
    {name = "Cairo Sanders"},
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: POSIX",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Atmospheric Science",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"
]

license = {text = "GNU General Public License v3"}
readme = "README.md"
requires-python = ">=3.10, <4.0"
dependencies = [
    "pywps==4.6.0",
    "poetry >=2.0.0",
    "jinja2",
    "click",
    "psutil",
    "nchelpers==5.5.11",
    "rpy2==3.3.6",
    "werkzeug==1.0.1",
    "wps-tools[r]==2.1.3",
    "gunicorn>=20.1.0",
    "setuptools"
    
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "flake8",
  "pytest-flake8",
  "ipython",
  "pytest-notebook",
  "nbsphinx",
  "nbval>=0.9.6",
  "nbconvert>=6.4.4",
  "sphinx==2.4.4",
  "bumpversion",
  "twine",
  "cruft",
  "black==24.3.0",
  "birdhouse-birdy",
  "jupyterlab",
  "shapely",
  "geopandas",
  "matplotlib",
  "requests_html",
  "ipywidgets",
  "ipyleaflet",
  "pyproj",
  "xarray",
  "xclim"
]

[project.scripts]
chickadee = "chickadee.cli:cli"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pcic"
url = "https://pypi.pacificclimate.org/simple"
priority = "supplemental"

[tool.pytest.ini_options]
markers = [
  "online: marks tests that use online resources (deselect with '-m \"not online\"')",
  "slow: marks tests that are slow (deselect with '-m \"not slow\"')"
]