[bumpversion]
current_version = 0.4.1
commit = True
tag = True

[metadata]
description-file = README.md

[bumpversion:file:chickadee/__version__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bumpversion:file:Dockerfile]
search = Version="{current_version}"
replace = Version="{new_version}"

[bumpversion:file:.cruft.json]
search = "version": "{current_version}",
replace = "version": "{new_version}",

